# infr

./: .gitattributes  .gitignore  AUDIT.md  CONTEXT.md  Cargo.toml  PLAN.md  README.md  bash_prompt  context.json
.cargo/: config.toml
.github/workflows/: ci.yml
crates/infr-chat/: Cargo.toml
crates/infr-chat/src/: lib.rs  stream.rs  template.rs  tools.rs
crates/infr-cli/: Cargo.toml
crates/infr-cli/src/: main.rs
crates/infr-core/: Cargo.toml
crates/infr-core/src/: backend.rs  error.rs  graph.rs  lib.rs  loader.rs  pager.rs  shutdown.rs  tensor.rs
crates/infr-cpu/: Cargo.toml
crates/infr-cpu/src/: kernels.rs  kvquant.rs  lib.rs  pool.rs  repack.rs
crates/infr-decode/: Cargo.toml
crates/infr-decode/src/: lib.rs
crates/infr-engine/: Cargo.toml
crates/infr-engine/src/: lib.rs
crates/infr-gguf/: Cargo.toml
crates/infr-gguf/src/: dequant.rs  lib.rs
crates/infr-hub/: Cargo.toml
crates/infr-hub/src/: lib.rs  model_ref.rs  pull.rs  store.rs
crates/infr-llama/: Cargo.toml
crates/infr-llama/src/: arch.rs  config.rs  cpu_backend.rs  cpu_model.rs  diffusion.rs  grammar.rs  iquant_grids.rs  kv.rs  lib.rs  model.rs  mtp.rs  parallel.rs  quant.rs  qwen35.rs  sampling.rs  tokenizer.rs  transformer.rs  util.rs  weights.rs
crates/infr-llama/tests/: cpu_backend.rs  decode_consistency.rs  seam_op_parity.rs
crates/infr-model/: Cargo.toml
crates/infr-server/: Cargo.toml
crates/infr-server/src/: lib.rs
crates/infr-vulkan/: Cargo.toml  build.rs
docs/: METAL.md  MTP.md  PERF.md  PLAN.md  QWEN35.md  cpu-perf.md
scripts/: compare.sh
(+167 files in other folders)
