[package]
name = "infr-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
infr-core.workspace = true
infr-engine.workspace = true
axum.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
